Updated Filter Model

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,4 @@
 
 edit_data/Lee/WIP_data_cleanup_Parse_other_df.ipynb
 edit_data/Lee/WIP_data_cleanup_Parse_other_df.ipynb
+edit_data/cleaned_data/movies.csv
