--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,4 @@
 edit_data/Lee/WIP_data_cleanup_Parse_other_df.ipynb
 edit_data/Lee/WIP_data_cleanup_Parse_other_df.ipynb
 edit_data/cleaned_data/movies.csv
+edit_data/cleaned_data/movies.csv
